---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE CAST (bigint AS int4) WITH INOUT AS ASSIGNMENT;
---
Parse {
    cst: SourceFile@0..54
      CreateCastStmt@0..54
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Cast@7..11 "CAST"
        Whitespace@11..12 " "
        Ascii40@12..13 "("
        TypeName@13..19
          Bigint@13..19 "bigint"
        Whitespace@19..20 " "
        As@20..22 "AS"
        Whitespace@22..23 " "
        TypeName@23..27
          Ident@23..27 "int4"
        Ascii41@27..28 ")"
        Whitespace@28..29 " "
        With@29..33 "WITH"
        Whitespace@33..34 " "
        Inout@34..39 "INOUT"
        Whitespace@39..40 " "
        As@40..42 "AS"
        Whitespace@42..43 " "
        Assignment@43..53 "ASSIGNMENT"
        Ascii59@53..54 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateCastStmt(
                CreateCastStmt {
                    sourcetype: Some(
                        TypeName {
                            names: [
                                Node {
                                    node: Some(
                                        String(
                                            String {
                                                sval: "pg_catalog",
                                            },
                                        ),
                                    ),
                                },
                                Node {
                                    node: Some(
                                        String(
                                            String {
                                                sval: "int8",
                                            },
                                        ),
                                    ),
                                },
                            ],
                            type_oid: 0,
                            setof: false,
                            pct_type: false,
                            typmods: [],
                            typemod: -1,
                            array_bounds: [],
                            location: 13,
                        },
                    ),
                    targettype: Some(
                        TypeName {
                            names: [
                                Node {
                                    node: Some(
                                        String(
                                            String {
                                                sval: "int4",
                                            },
                                        ),
                                    ),
                                },
                            ],
                            type_oid: 0,
                            setof: false,
                            pct_type: false,
                            typmods: [],
                            typemod: -1,
                            array_bounds: [],
                            location: 23,
                        },
                    ),
                    func: None,
                    context: CoercionAssignment,
                    inout: true,
                },
            ),
            range: 0..53,
        },
    ],
}
